--- a/angular.json
+++ b/angular.json
@@ -53,7 +53,13 @@
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true
+              "sourceMap": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -94,6 +100,23 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {
+            "version": 2
+          },
+          "configurations": {
+            "production": {
+              "buildTarget": "bon-voyage:build:production",
+              "serveTarget": "bon-voyage:serve:production"
+            },
+            "development": {
+              "buildTarget": "bon-voyage:build:development",
+              "serveTarget": "bon-voyage:serve:development"
+            }
+          },
+          "defaultConfiguration": "production"
         }
       }
     }
