--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -6,6 +6,7 @@
   "bracketSpacing": true,
   "arrowParens": "avoid",
   "trailingComma": "es5",
+  "htmlWhitespaceSensitivity": "ignore",
   "bracketSameLine": true,
   "printWidth": 80
 }
