--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -8,5 +8,6 @@
   "trailingComma": "es5",
   "htmlWhitespaceSensitivity": "ignore",
   "bracketSameLine": true,
-  "printWidth": 80
+  "printWidth": 80,
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
