--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@ngrx/eslint-plugin": "^17.2.0",
     "@ngrx/schematics": "^18.0.0",
     "@types/jasmine": "~5.1.0",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "7.8.0",
     "@typescript-eslint/parser": "7.8.0",
     "autoprefixer": "^10.4.19",
@@ -59,6 +60,7 @@
     "prettier-eslint": "^16.3.0",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.4.3",
-    "typescript": "~5.4.2"
+    "typescript": "~5.4.2",
+    "uuid": "^10.0.0"
   }
 }
