--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ngrx/effects": "^18.0.0",
     "@ngrx/store": "^17.2.0",
     "@ngrx/store-devtools": "^18.0.0",
+    "ng-zorro-antd": "^18.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
